--- a/leetcode-lint/leetcode-lint.vcxproj.filters
+++ b/leetcode-lint/leetcode-lint.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="merge-sorted-array\merge-sorted-array.cpp">
+    <ClCompile Include="length-of-last-word\length-of-last-word.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
