--- a/leetcode-lint/leetcode-lint.vcxproj
+++ b/leetcode-lint/leetcode-lint.vcxproj
@@ -11,7 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="two-sum\two-sum.cpp" />
+    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{B106E820-0A86-47F2-B426-8CB8776179D5}</ProjectGuid>
