--- a/leetcode-lint/leetcode-lint.vcxproj.filters
+++ b/leetcode-lint/leetcode-lint.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="test.cpp">
+    <ClCompile Include="gray-code\gray-code.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
